<resources>
    <string name="app_name">Test</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="registar">Registar</string>
    <string name="registo">Registo</string>
    <string name="nome_de_utilizador">Nome de Utilizador</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="adicionar_a_favoritos">Adicionar a Favoritos</string>
    <string name="obter_direcoes">Obter Direções</string>
    <string name="ver_clima">Ver Clima</string>
    <string name="pontos_de_interesse">Pontos de Interesse</string>
    <string name="ver_historia">História</string>
    <string name="informacao_acessibilidade">Informações de acessibilidade</string>
    <string name="historia">História</string>
    <string name="descicao">Descrição da estação</string>
    <string name="nome_estacao">Nome da estação</string>
    <string name="data_estacao">Data de Fundação da estação</string>
    <string name="estado_estacao">Estado atual da estação</string>
    <string name="acessibilidade_invalida">Esta Estação não tem pontos de Acessibilidade</string>
    <string name="logoutText">Logout</string>
    <string name="remover_favorito">Remover Favorito</string>
    <string name="place_imagem">Imagem do local de interesse</string>
    <string name="imagem_place">Imagem do place</string>
    <string name="icon_clima">Icon do Clima</string>
    <string name="atualizar_clima">Atualizar Clima</string>
    <string name="nome_local">Nome do Local</string>
    <string name="rua_local">Rua do Local</string>
    <string name="adicionarFavPlaces">Adicionar aos Favoritos</string>
    <string name="fechar">Fechar</string>
    <string name="nome_favorito">Nome do Favorito</string>
    <string name="comboios_de_portugal">Comboios de Portugal</string>
    <string name="cp">CP</string>
    <string name="titulo_noticia">Título da Notícia</string>
    <string name="descricao_noticia">Descrição da Notícia</string>
    <string name="pass_atual">Password Atual</string>
    <string name="nova_pass">Nova Password</string>
    <string name="confirmar_pass">Confirmar Password</string>
    <string name="mostrar_estrada">Mostrar vista da estrada</string>
    <string name="clima_atual">Clima Atual</string>
    <string name="guardar_ateracoes">Guardar Alterações</string>
    <string name="pass_parametros">Password tem de conter pelo menos uma letra minúscula, uma maiúscula, um caractere especial, e tem de ter pelo menos 5 caracteres.</string>
    <string name="imagem_registo">Imagem Registo</string>
    <string name="tempo_estimado">Tempo Estimado</string>
    <string name="instruçoes_nav">Instruções de navegação</string>
    <string name="carro">Carro</string>
    <string name="a_pe">A Pé</string>
    <string name="transportes_publicos">Transportes Públicos</string>
    <string name="email_nome">Email ou Nome</string>

    <string-array name="filtro_favoritos">
        <item>Todos</item>
        <item>Estações</item>
        <item>Pontos de interesse</item>


    </string-array>
    <string-array name="filtro_noticias">
        <item>All News</item>
        <item>@string/comboios_de_portugal</item>
        <item>@string/cp</item>
    </string-array>
</resources>