<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="#ADD8E6">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <TextView
        android:id="@+id/nomeViewEstacao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="nome da estacao"
        android:textSize="24sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/imagemViewEstacao"
        android:layout_width="360dp"
        android:layout_height="160dp"
        android:layout_marginTop="30sp"
        android:src="@drawable/ic_launcher_background"
        />
</LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:orientation="vertical"
        android:layout_marginTop="250dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/buttonDirecoes"
            android:layout_width="160dp"
            android:layout_height="70dp"
            android:text="@string/ver_clima"
            android:textSize="20sp"
            android:backgroundTint="#0E6589"
            />
        <Button
            android:layout_width="160dp"
            android:layout_height="70dp"
            android:layout_marginTop="15dp"
            android:text="@string/pontos_de_interesse"
            android:textSize="20sp"
            android:backgroundTint="#0E6589"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:orientation="vertical"
        android:layout_marginTop="250dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <Button
            android:layout_width="160dp"
            android:layout_height="70dp"
            android:text="@string/obter_direcoes"
            android:textSize="20sp"
            android:backgroundTint="#0E6589"
            />
        <Button
            android:id="@+id/addEstacaoFavButton"
            android:layout_width="160dp"
            android:layout_height="70dp"
            android:layout_marginTop="15dp"
            android:text="@string/adicionar_a_favoritos"
            android:textSize="20sp"
            android:backgroundTint="#0E6589"
            />
    </LinearLayout>

    <Button
        android:id="@+id/buttonMostrarHistorico"
        android:layout_width="580dp"
        android:layout_height="90dp"
        android:layout_marginTop="450dp"
        android:text="@string/ver_historia"
        android:textSize="20sp"
        android:backgroundTint="#0E6589"
    />

    <Button
        android:id="@+id/buttonMostrarAcessibilidade"
        android:layout_width="580dp"
        android:layout_height="90dp"
        android:layout_marginTop="570dp"
        android:text="@string/informacao_acessibilidade"
        android:textSize="20sp"
        android:backgroundTint="#0E6589"
        />
</RelativeLayout>