<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="#ADD8E6">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/nomeViewEstacao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="40sp"
            android:text="@string/nome_estacao"
            />

        <ImageView
            android:id="@+id/imagemViewEstacao"
            android:layout_width="460dp"
            android:layout_height="160dp"
            android:src="@drawable/ic_launcher_background"
            android:layout_marginTop="10sp"
            />

        <TextView
            android:id="@+id/dataViewEstacao"
            android:layout_width="360sp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:padding="18dp"
            android:text="@string/data_estacao"
            android:textSize="18sp"
            android:backgroundTint="#0E6589"
            android:textColor="@color/white"
            android:background="@drawable/rounded_corner"
            />
        <TextView
            android:id="@+id/descricaoViewEstacao"
            android:layout_width="360sp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:padding="18dp"
            android:text="@string/descicao"
            android:textSize="18sp"
            android:backgroundTint="#0E6589"
            android:textColor="@color/white"
            android:background="@drawable/rounded_corner"
            />
        <TextView
            android:id="@+id/estadoViewEstacao"
            android:layout_width="360sp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:padding="18dp"
            android:text="@string/estado_estacao"
            android:textSize="18sp"
            android:backgroundTint="#0E6589"
            android:textColor="@color/white"
            android:background="@drawable/rounded_corner"
            />


    </LinearLayout>

</RelativeLayout>